--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-.vscode/
+
 # Created by https://www.gitignore.io/api/django,python,database,visualstudio
 # Edit at https://www.gitignore.io/?templates=django,python,database,visualstudio
-
+.vscode
 ### Database ###
 *.accdb
 *.db
