--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,20 @@
 astroid==2.2.5
+autopep8==1.4.4
 config==0.4.2
+confusable-homoglyphs==3.2.0
 dj-database-url==0.5.0
 Django==1.11
 django-bootstrap3==11.0.0
 django-heroku==0.3.1
+django-registration==2.4.1
+django-tinymce==2.8.0
 gunicorn==19.9.0
 isort==4.3.18
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 Pillow==6.0.0
 psycopg2==2.8.2
+pycodestyle==2.5.0
 pylint==2.3.1
 python-decouple==3.1
 pytz==2019.1
